--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,20 @@
-{
+html {
     font-size: 14px;
-}
-.blog-masthead{
-    background-color: #b34848
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-h7 {
-    color:#b34848;
-}
+ }
+ h1,h2,h3,h5,h4,h6 {
+    color: #b34848 ;
+ }
+ .blog-masthead {
+    background-color: #b34848;
+    text-decoration:none;
+ }
+ h2,a {
+    color: #b34848 ;
+ }
+ a:hover {
+    color: #b34848 ;
+    text-decoration: underline;
+ }
+ .hide {
+    display: none;
+ }
